--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ body {
     font-weight: 700;
 }
 
-.cartao:hover .cartao__conteudo {
+.cartao.active .cartao__conteudo {
     transform: rotateY(180deg);
 }
 
@@ -95,4 +95,19 @@ footer p {
     text-align: center;
     font-size: 0.6rem;
     margin-top: 0.5rem;
+}
+
+@media (max-width: 560px){
+    body{
+        background: url(img/bg-mobile.webp);
+    }
+    .cartao{
+        flex:1 0 calc(100% - 1rem);
+    }
+    .cartao__conteudo h3{
+        font-size: 3vw;
+    }
+    .cartao__conteudo p{
+        font-size: 3.8vw;
+    }
 }
